c/src/test/resources/c/mini_bnc/valid/arrayAri.ctrl
<controlFile>
  <sourceFile name="arrayAri.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="10" />
  </run>
</controlFile>