c/src/test/resources/c/mini_bnc/invalid/inf5Merge.ctrl
<controlFile>
  <sourceFile name="inf5Merge.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="54" />
  </run>
</controlFile>